# testrust

./: Cargo.toml  README.md  package-lock.json
easyRustProject/187UsingSerde/serde/: Cargo.toml
easyRustProject/187UsingSerde/serde/src/: main.rs
easyRustProject/lazy_static188/: Cargo.toml
easyRustProject/lazy_static188/src/: main.rs
src/: .main.rs.swp  debug.rs  main  main.rs  print.rs  print1.rs  strings.rs  tempCodeRunnerFile  tempCodeRunnerFile.rs  types.rs  vars.rs
src/main.dSYM/Contents/Resources/DWARF/: main
