[package]
name = "testrust"
version = "0.1.0"
authors = ["YoungHa Kim <ytok1108@aol.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
serde = { version = "1.0.0", features = ["derive"] }
