[package]
name = "testrust"
version = "0.1.0"
authors = ["YoungHa Kim <ytok1108@aol.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
